--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css"/>
+
+</head>
+
+<body>
+	<h1>Hello World</h1>
+	<h2> 저는 황상익입니다. </h2>
+</body>
+
+</html>
